--- a/index.html
+++ b/index.html
@@ -109,70 +109,40 @@
       <div class="stats-title">
         <h2 class="display-6 mb-4">在这一年里</h2>
         <div class="d-flex justify-content-center align-items-center">
-          <span class="fs-4 ms-3">我读了 &nbsp;</span><span class="stats-number">25</span>
+          <span class="fs-4 ms-3">我读了 &nbsp;</span><span class="stats-number">11</span>
           <span class="fs-4 ms-3">本书</span>
         </div>
         <div class="books-container">
           <div class="books-track">
             <div class="book-item">
-              <img
-                src="https://i-blog.csdnimg.cn/direct/9180c7af82ea4d7a92f75ac019e127e2.jpeg"
-                alt="书籍1"
-              />
+              <img src="./images/book1.jpg" alt="书籍1" />
             </div>
             <div class="book-item">
-              <img
-                src="https://i-blog.csdnimg.cn/direct/4dfd342d82d043bb86666c2ca9dbdd7f.jpeg"
-                alt="书籍2"
-              />
+              <img src="./images/book3.jpg" alt="书籍2" />
             </div>
             <div class="book-item">
-              <img
-                src="https://i-blog.csdnimg.cn/direct/8122a83568254694b88c13e23c0efa0b.jpeg"
-                alt="书籍3"
-              />
+              <img src="./images/book4.jpg" alt="书籍3" />
             </div>
             <div class="book-item">
-              <img
-                src="https://i-blog.csdnimg.cn/direct/aba6a62e6fc244518d28f756909d2a77.jpeg"
-                alt="书籍4"
-              />
+              <img src="./images/book5.jpg" alt="书籍4" />
             </div>
             <div class="book-item">
-              <img
-                src="https://i-blog.csdnimg.cn/direct/3bb554dc95d94d24b60d1aed854b4671.jpeg"
-                alt="书籍5"
-              />
+              <img src="./images/book6.jpg" alt="书籍5" />
             </div>
             <div class="book-item">
-              <img
-                src="https://i-blog.csdnimg.cn/direct/cdf206c6385b4994b8bbb15123235d38.jpeg"
-                alt="书籍6"
-              />
+              <img src="./images/book7.jpg" alt="书籍6" />
             </div>
             <div class="book-item">
-              <img
-                src="https://i-blog.csdnimg.cn/direct/97508a159b204b91a17c0cbde04e9119.jpeg"
-                alt="书籍7"
-              />
+              <img src="./images/book8.jpg" alt="书籍7" />
             </div>
             <div class="book-item">
-              <img
-                src="https://i-blog.csdnimg.cn/direct/45bbbf4aa998434ab928de3d4ea77ab1.jpeg"
-                alt="书籍8"
-              />
+              <img src="./images/book9.jpg" alt="书籍8" />
             </div>
             <div class="book-item">
-              <img
-                src="https://i-blog.csdnimg.cn/direct/bf8fb6b61283412badd5eb148334bd77.jpeg"
-                alt="书籍9"
-              />
+              <img src="./images/book10.jpg" alt="书籍10" />
             </div>
             <div class="book-item">
-              <img
-                src="https://i-blog.csdnimg.cn/direct/ab250d4c1ff54f048533262dc7e74abf.jpeg"
-                alt="书籍10"
-              />
+              <img src="./images/book11.jpg" alt="书籍11" />
             </div>
           </div>
         </div>
