--- a/index.html
+++ b/index.html
@@ -184,6 +184,43 @@
           </div>
         </div>
       </div>
+      <div class="stats-title">
+        <div class="d-flex justify-content-center align-items-center">
+          <span class="fs-4 ms-3">我听了了 &nbsp;</span><span class="stats-number">290</span>
+          <span class="fs-4 ms-3">首歌</span>
+        </div>
+        <div class="books-container">
+          <div class="books-track">
+            <div class="book-item">
+              <img src="images/video1.webp" alt="书籍1" />
+            </div>
+            <div class="book-item">
+              <img src="images/video1.webp" alt="书籍2" />
+            </div>
+            <div class="book-item">
+              <img src="images/video1.webp" alt="书籍3" />
+            </div>
+            <div class="book-item">
+              <img src="images/video1.webp" alt="书籍4" />
+            </div>
+            <div class="book-item">
+              <img src="images/video1.webp" alt="书籍5" />
+            </div>
+            <div class="book-item">
+              <img src="images/video1.webp" alt="书籍6" />
+            </div>
+            <div class="book-item">
+              <img src="images/video1.webp" alt="书籍7" />
+            </div>
+            <div class="book-item">
+              <img src="images/video1.webp" alt="书籍8" />
+            </div>
+            <div class="book-item">
+              <img src="images/video1.webp" alt="书籍9" />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="footer">
