--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
           <div class="journey-content">
             <h3 class="journey-title">开始写博客</h3>
             <p class="journey-text">
-              4月中旬，我创建了一个博客账号，开始写博客，收获100+粉丝，阅读量达到2.08w,
-              5月份因为琐事就没在继续写了。
+              4月中旬，我创建了一个博客账号，开始写博客，收获100+粉丝，阅读量达到2.08w。
             </p>
           </div>
         </div>
@@ -259,7 +258,6 @@
           </div>
         </div>
       </div>
-      <!-- 我看了多少电影 -->
       <div class="stats-title">
         <div class="d-flex justify-content-center align-items-center">
           <span class="fs-4 ms-3">我看了 &nbsp;</span><span class="stats-number">24</span>
