修复小错误

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     </div>
 
     <div class="footer">
-      <p class="mb-1">Prower By zero</p>
+      <p class="mb-1">Power By zero</p>
       <p class="mb-0" id="uptime"></p>
       <p id=""></p>
     </div>
