--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>This Year Summary</title>
+    <title>This Year-Summary</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="shortcut icon" href="./favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
   </head>
   <body>
+    <audio id="bgMusic" loop>
+      <source src="bgcmusic.mp3" type="audio/mp3" />
+    </audio>
     <div class="container position-relative min-vh-100">
       <div class="d-flex justify-content-between align-items-center pt-4">
         <h2 class="display-4">In 2024,</h2>
         <div class="d-flex align-items-center">
+          <div class="music-control" id="musicControl">
+            <i class="fas fa-music"></i>
+          </div>
           <img
             src="images/touxiang.jpg"
             alt="头像"
@@ -379,6 +389,41 @@
 
         rocket.addEventListener("click", function () {
           window.scrollTo({ top: 0, behavior: "smooth" });
+        });
+      });
+
+      document.addEventListener("DOMContentLoaded", function () {
+        const bgMusic = document.getElementById("bgMusic");
+        const musicControl = document.getElementById("musicControl");
+        let isPlaying = false;
+        document.addEventListener(
+          "click",
+          function initAudio() {
+            if (!isPlaying) {
+              bgMusic
+                .play()
+                .then(() => {
+                  isPlaying = true;
+                  musicControl.classList.add("playing");
+                })
+                .catch((error) => {
+                  console.log("播放失败:", error);
+                });
+              document.removeEventListener("click", initAudio);
+            }
+          },
+          { once: true }
+        );
+        musicControl.addEventListener("click", function (e) {
+          e.stopPropagation();
+          if (isPlaying) {
+            bgMusic.pause();
+            musicControl.classList.remove("playing");
+          } else {
+            bgMusic.play();
+            musicControl.classList.add("playing");
+          }
+          isPlaying = !isPlaying;
         });
       });
     </script>
