--- a/index.html
+++ b/index.html
@@ -122,9 +122,7 @@
             </div>
             <div class="card-body text-center">
               <h3 class="card-title fs-5">付费文章（字数1w+）</h3>
-              <p class="card-text">
-                收获400人的访问+2个付费用户认可<br />耗时8640分钟（零散时间写的）
-              </p>
+              <p class="card-text">收获400人的访问+2个付费用户认可<br />耗时8640分钟</p>
             </div>
           </div>
         </div>
@@ -159,7 +157,7 @@
           <div class="journey-content">
             <h3 class="journey-title">开始写博客</h3>
             <p class="journey-text">
-              4月中旬，我创建了一个博客账号，开始写博客，收获100+粉丝，阅读量达到2.08w。
+              4月中旬，我创建了一个博客账号，开始写博客，收获100+粉丝，阅读量达到2.08w。后来因为琐事就没再更新了
             </p>
           </div>
         </div>
@@ -195,7 +193,7 @@
             <img src="images/feng2.png" alt="未来" />
           </div>
           <div class="journey-content">
-            <h3 class="journey-title">等着机会来，不如主动去抓</h3>
+            <h3 class="journey-title">等着机会，不如主动去抓</h3>
             <p class="journey-text">
               10月初，忙完主要事情之外，开始做第二个项目，独立卡片，起因是因为一款同类的产品的爆火，让我觉得小众产品也有很大的受众群体，
               所幸在同类产品的基础上加入了自己的理解，2天后产品上线。考虑成本等因素，就选在edge扩展市场上线（做这个的之前也做过翻译的插件）
@@ -208,7 +206,7 @@
             <img src="images/feng3.png" alt="成长" />
           </div>
           <div class="journey-content">
-            <h3 class="journey-title">机遇来到，开启新的尝试</h3>
+            <h3 class="journey-title">偶然的机会，开启新的尝试</h3>
             <p class="journey-text">
               11月底，看到字节公司的产品经理在招创作者，我加入了其中，开始写文章来沉淀自己，那段时间也在研究AI技术，所幸把我的经验写下来。于是，越写越多，随后审核通过后，就上线了。虽然浏览量不错，收益却惨不忍睹，但还是收到了两个用户的认可，非常感谢
             </p>
